fix close button IE

--- a/css/index.styl
+++ b/css/index.styl
@@ -152,6 +152,12 @@ iphoneBar = 68px
     border 6px solid white
     cursor pointer
     line-height 0
+    
+    svg
+      -webkit-box-sizing content-box
+      -moz-box-sizing content-box
+      box-sizing content-box
+      
     polygon
       fill #373737
 
